[gd_scene load_steps=2 format=3 uid="uid://d10pmskfsd6hp"]

[ext_resource type="Script" uid="uid://d0pyj32dnsy4u" path="res://scripts/control.gd" id="1_0fbet"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0fbet")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00200834, 1.28834e-07, 0.00200831, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -90.5
offset_right = 200.0
offset_bottom = 90.5
grow_horizontal = 2
grow_vertical = 2

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
placeholder_text = "Enter your name"
clear_button_enabled = true

[node name="IPInput" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
placeholder_text = "Enter host IP"

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Game
"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game
"

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
